ProRob/log/build_2025-01-14_10-09-08/package_master/stderr.log
  File "/home/rouillon/ProRob/install/package_master/lib/python3.10/site-packages/package_master/client_member_function.py", line 33
    minimal_client.get_logger().info(
                                    ^
SyntaxError: '(' was never closed

